# genesis-sensors

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: pip_retry.sh
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  publish.yml  release-drafter.yml  repo-standards.yml  semantic-release.yml
docs/: architecture.md  contributing.md  examples.md  index.md  overview.md  release.md  sensor-models.md
docs/api/: acoustic_navigation.md  airspeed.md  barometer.md  base.md  battery.md  camera_model.md  config.md  contact_sensor.md  current_sensor.md  depth_camera.md  environmental.md  event_camera.md  force_torque.md  gauss_markov.md  gnss.md  hydrophone.md  imu.md  inclinometer.md  index.md  joint_state.md  leak_detector.md  lidar.md  load_cell.md  magnetometer.md  motor_temperature.md  optical_flow.md  presets.md  proximity_tof.md  radio.md  rangefinder.md  rpm_sensor.md  scheduler.md  sonar.md  stereo_camera.md  suite.md  tactile_array.md  thermal_camera.md  types.md  ultrasonic.md  underwater_modem.md  (+4 more)
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
examples/: camera_as_sensor.py  contact_force_go2.py  drone_demo.py  drone_with_sensors.py  environmental_sensors.py  external_sensors.py  external_sensors_rerun.py  fault_tolerant_sensors.py  franka_arm_sensors.py  franka_demo.py  generate_sensor_doc_assets.py  go2_demo.py  go2_sensors.py  imu_franka.py  kinematic_contact_probe.py  lidar_teleop.py  perception_demo.py  sensor_usage_patterns.py  tactile_elastomer_franka.py  tactile_elastomer_sandbox.py
scripts/: gen_api_docs.py
src/genesis_sensors/: __init__.py  _compat.py  cli.py  config.py  genesis_bridge.py  presets.py  rigs.py  robustness.py  scenes.py  synthetic.py
src/genesis_sensors/_runtime_sensors/: __init__.py  _gauss_markov.py  acoustic_navigation.py  airspeed.py  barometer.py  base.py  battery.py  camera_model.py  config.py  contact_sensor.py  current_sensor.py  depth_camera.py  environmental.py  event_camera.py  fidelity.py  force_torque.py  genesis_bridge.py  genesis_camera.py  genesis_imu.py  genesis_lidar.py  gnss.py  gpu_backend.py  hydrophone.py  imu.py  inclinometer.py  joint_state.py  leak_detector.py  lidar.py  load_cell.py  magnetometer.py  motor_temperature.py  optical_flow.py  presets.py  proximity_tof.py  radio.py  rangefinder.py  rpm_sensor.py  scheduler.py  sonar.py  stereo_camera.py  (+10 more)
tests/: conftest.py  test_acoustic_navigation.py  test_architecture.py  test_cli.py  test_compat.py  test_edge_cases.py  test_environmental_sensors.py  test_public_api.py  test_review_feedback_runtime_sensors.py  test_rigs.py  test_robustness.py  test_sonar_imaging.py  test_ultrasonic_sensors.py  test_wireless_sensors.py
