[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-sensors"
version = "0.1.0"
description = "Self-contained sensor rigs and demos for Genesis"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Vincent Lordier", email = "vlordier@users.noreply.github.com"}]
keywords = ["genesis", "robotics", "sensors", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "genesis-world>=0.4.2",
    "numpy>=1.26.4",
    "pydantic>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "bump-my-version>=0.32.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.39",
    "pre-commit>=4.0.1",
    "pytest>=8.0",
    "ruff>=0.9",
    "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/vlordier/genesis-sensors"
Repository = "https://github.com/vlordier/genesis-sensors"
Issues = "https://github.com/vlordier/genesis-sensors/issues"
Documentation = "https://github.com/vlordier/genesis-sensors/blob/main/docs/overview.md"
Changelog = "https://github.com/vlordier/genesis-sensors/releases"

[project.scripts]
genesis-sensors-demo = "genesis_sensors.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["genesis_sensors", "genesis_sensors.*"]

[tool.setuptools.package-data]
genesis_sensors = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = false
tag = false
message = "chore(release): bump version {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "src/genesis_sensors/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
